# book_fund_api

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  book_fund.db  dependacies.py  pyproject.toml  requirements.txt
database/: models.py
repositories/: author_repository.py  catalog_repository.py  country_repository.py  edition_repository.py  genre_repository.py  language_repository.py
routers/: __init__.py  author.py  catalog.py  country.py  genre.py  language.py  publisher.py
schemas/: books.py  editions.py
src/: config.py  main.py
src/auth/: dependancies.py  utils.py
src/database/: database.py  models.py
src/migrations/: env.py
src/migrations/versions/: 2cf3d1b83a20_изменил_функцию_даты.py  467b4340c066_.py  615bf4cf04db_изменил_функцию_даты.py  74c42d832036_создана_модель_пользователей.py  78f89d26245d_.py  796cc90828d7_added_first_and_last_name_to_users.py  a01355507a7e_changed_edition.py  a901f98f032b_add_is_admin_attr.py  (+6 more)
src/repositories/: __init__.py  author_repository.py  base_repository.py  book_repository.py  catalog_repository.py  country_repository.py  edition_repository.py  genre_repository.py  language_repository.py  publisher_repository.py  user_repository.py
src/routers/: __init__.py  auth.py  author.py  book.py  catalog.py  country.py  edition.py  genre.py  language.py  publisher.py  user.py
src/schemas/: __init__.py  book_edition_schemas.py  book_schemas.py  books.py  books_schema.py  editions.py  schemas.py  undepended_schemas.py  user.py
src/services/: __init__.py  base_service.py  dependacies.py  services.py
