[tool.poetry]
name = "book-fund"
version = "0.1.0"
description = ""
authors = ["Ivan <ideshchenko@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.4"
pydantic = "2.9.2"
uvicorn = "0.32.0"
sqlalchemy = "2.0.36"
pydantic-settings = "2.6.1"
alembic = "1.14.0"
pyjwt = "2.10.0"
bcrypt = "4.2.0"
python-multipart = "0.0.17"
aiosqlite = "0.20.0"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
cffi = "1.17.1"
click = "8.1.7"
colorama = "0.4.6"
cryptography = "43.0.3"
greenlet = "3.1.1"
h11 = "0.14.0"
idna = "3.10"
mako = "1.3.6"
markupsafe = "3.0.2"
pycparser = "2.22"
pydantic-core = "2.23.4"
python-dotenv = "1.0.1"
sniffio = "1.3.1"
starlette = "0.41.2"
typing-extensions = "4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
